[package]
name = "rexpat"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "rexpat"
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
path = "src/xmlwf/xmlwf.rs"
name = "xmlwf"

[[bin]]
path = "src/tests/runtests.rs"
name = "runtests"

[[bin]]
path = "src/tests/benchmark.rs"
name = "benchmark"

[dependencies]
libc = "0.2"
alloc-wg = "0.7"
wchar = { path = "deps/wchar", optional = true }

[features]
unicode = []
unicode_wchar_t = ["wchar"]
getrandom_syscall = []
mozilla = ["unicode"]
