[package]
name = "rexpat"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false

[lib]
name = "rexpat"
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
path = "src/xmlwf/xmlwf.rs"
name = "xmlwf"

[[bin]]
path = "src/tests/runtests.rs"
name = "runtests"

[[bin]]
path = "src/tests/benchmark.rs"
name = "benchmark"

[[bench]]
path = "src/tests/benchmark.rs"
name = "benchmark"
harness = false

[dependencies]
libc = "0.2"
fallible_collections = "0.1.0"
wchar = { path = "deps/wchar", optional = true }
bencher = "0.1"

[features]
unicode = []
unicode_wchar_t = ["wchar"]
mozilla = ["unicode"]
