[package]
name = "rexpat"
authors = ["C2Rust"]
version = "0.0.0"
publish = false
edition = "2018"
autobins = false
license = "MIT"
repository = "https://github.com/immunant/rexpat"
description = "A libexpat compatible Rust crate"

[lib]
name = "rexpat"
crate-type = ["staticlib", "rlib", "cdylib"]

[[bin]]
path = "src/xmlwf/xmlwf.rs"
name = "xmlwf"

[[bin]]
path = "src/tests/runtests.rs"
name = "runtests"

[[bin]]
path = "src/tests/benchmark.rs"
name = "benchmark"

[[bench]]
path = "src/tests/benchmark.rs"
name = "benchmark"
harness = false

[dependencies]
libc = "0.2"
fallible_collections = "0.1.0"
wchar = { path = "deps/wchar", optional = true }
bencher = "0.1"
num-traits = "0.2"
num-derive = "0.2"

[features]
unicode = []
unicode_wchar_t = ["wchar"]
mozilla = ["unicode"]
